--- a/src/main/resources/templates/admin/addTextbook.html
+++ b/src/main/resources/templates/admin/addTextbook.html
@@ -11,7 +11,7 @@
 	<header th:replace="header"></header>
 	<main>
 		<h1>教科書登録</h1>
-		<span th:utext="${msg}"></span>
+		<span th:utext="${msg}" style="color: red;"></span>
 		<form action="/admin/addTextbook" method="post">
 			<table border="1">
 				<tr>
