時間割の完成

--- a/src/main/resources/static/css/mypage.css
+++ b/src/main/resources/static/css/mypage.css
@@ -95,3 +95,15 @@ img{
   height: 200px;
   width: 155px;
 }
+#table5 th{
+	width: auto;;
+}
+
+#table5 td a{
+		   display: block;
+   padding: 0.6em 1em; 
+ text-decoration: none;
+}
+#table5 a:hover{
+	background-color: darkgrey;
+}
