--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -113,253 +113,289 @@
 				</table>
 			</th:block>
 		</tablemarge>
-
+<br>
 		<table class="table" border="1" id="table5">
 			<tr>
 				<th></th>
-				<th>月</th>
-				<th>火</th>
-				<th>水</th>
-				<th>木</th>
-				<th>金</th>
-				<th>土</th>
+				<th class="tabletitle">月</th>
+				<th class="tabletitle">火</th>
+				<th class="tabletitle">水</th>
+				<th class="tabletitle">木</th>
+				<th class="tabletitle">金</th>
+				<th class="tabletitle">土</th>
 			</tr>
 			<tr>
-				<th>1</th>
+				<th class="tabletitle">1</th>
 				<!--月曜1限目-->
 				<td th:if="${class11 != null}">
-					<div th:href="@{/account/viewTimetable?lessonId={id}(id=${class11.id})}" th:text="${class11.name}">
-					</div>
+					<a class="tts" th:href="@{/account/viewTimetable?lessonId={id}(id=${class11.id})}"
+						th:text="${class11.name}">
+					</a>
 				</td>
 				<td th:if="${class11 == null}"><a href="/account/addTimetable?day=1&period=1">授業登録</a></td>
 				<!--火曜1限目-->
 				<td th:if="${class21 != null}">
-					<div th:href="@{/account/viewTimetable?lessonId={id}(id=${class21.id})}" th:text="${class21.name}">
-					</div>
+					<a class="tts" th:href="@{/account/viewTimetable?lessonId={id}(id=${class21.id})}"
+						th:text="${class21.name}">
+					</a>
 				</td>
 				<td th:if="${class21 == null}"><a href="/account/addTimetable?day=2&period=1">授業登録</a></td>
 				<!--水曜1限目-->
 				<td th:if="${class31 != null}">
-					<div th:href="@{/account/viewTimetable?lesoonId=={id}(id=${class31.id})}" th:text="${class31.name}">
-					</div>
+					<a class="tts" th:href="@{/account/viewTimetable?lesoonId=={id}(id=${class31.id})}"
+						th:text="${class31.name}">
+					</a>
 				</td>
 				<td th:if="${class31 == null}"><a href="/account/addTimetable?day=3&period=1">授業登録</a></td>
 				<!--木曜1限目-->
 				<td th:if="${class41 != null}">
-					<div th:href="@{/account/viewTimetable?lesoonId=={id}(id=${class41.id})}" th:text="${class41.name}">
-					</div>
+					<a class="tts" th:href="@{/account/viewTimetable?lesoonId=={id}(id=${class41.id})}"
+						th:text="${class41.name}">
+					</a>
 				</td>
 				<td th:if="${class41 == null}"><a href="/account/addTimetable?day=4&period=1">授業登録</a></td>
 				<!--金曜1限目-->
 				<td th:if="${class51 != null}">
-					<div th:href="@{/account/viewTimetable?lesoonId=={id}(id=${class51.id})}" th:text="${class51.name}">
-					</div>
+					<a class="tts" th:href="@{/account/viewTimetable?lesoonId=={id}(id=${class51.id})}"
+						th:text="${class51.name}">
+					</a>
 				</td>
 				<td th:if="${class51 == null}"><a href="/account/addTimetable?day=5&period=1">授業登録</a></td>
 				<!--土曜1限目-->
 				<td th:if="${class61 != null}">
-					<div th:href="@{/account/viewTimetable?lesoonId=={id}(id=${class61.id})}" th:text="${class61.name}">
-					</div>
+					<a class="tts" th:href="@{/account/viewTimetable?lesoonId=={id}(id=${class61.id})}"
+						th:text="${class61.name}">
+					</a>
 				</td>
 				<td th:if="${class61 == null}"><a href="/account/addTimetable?day=6&period=1">授業登録</a></td>
 			</tr>
 
 			<tr>
-				<th>2</th>
+				<th class="tabletitle">2</th>
 				<!--月曜2限目-->
 				<td th:if="${class12 != null}">
-					<div th:href="@{/account/viewTimetable?lessonId={id}(id=${class12.id})}" th:text="${class12.name}">
-					</div>
+					<a class="tts" th:href="@{/account/viewTimetable?lessonId={id}(id=${class12.id})}"
+						th:text="${class12.name}">
+					</a>
 				</td>
 				<td th:if="${class12 == null}"><a href="/account/addTimetable?day=1&period=2">授業登録</a></td>
 				<!--火曜2限目-->
 				<td th:if="${class22 != null}">
-					<div th:href="@{/account/viewTimetable?lessonId={id}(id=${class22.id})}" th:text="${class22.name}">
-					</div>
+					<a class="tts" th:href="@{/account/viewTimetable?lessonId={id}(id=${class22.id})}"
+						th:text="${class22.name}">
+					</a>
 				</td>
 				<td th:if="${class22 == null}"><a href="/account/addTimetable?day=2&period=2">授業登録</a></td>
 				<!--水曜2限目-->
 				<td th:if="${class32 != null}">
-					<div th:href="@{/account/viewTimetable?lesoonId=={id}(id=${class32.id})}" th:text="${class32.name}">
-					</div>
+					<a class="tts" th:href="@{/account/viewTimetable?lesoonId=={id}(id=${class32.id})}"
+						th:text="${class32.name}">
+					</a>
 				</td>
 				<td th:if="${class32 == null}"><a href="/account/addTimetable?day=3&period=2">授業登録</a></td>
 				<!--木曜2限目-->
 				<td th:if="${class42 != null}">
-					<div th:href="@{/account/viewTimetable?lesoonId=={id}(id=${class42.id})}" th:text="${class42.name}">
-					</div>
+					<a class="tts" th:href="@{/account/viewTimetable?lesoonId=={id}(id=${class42.id})}"
+						th:text="${class42.name}">
+					</a>
 				</td>
 				<td th:if="${class42 == null}"><a href="/account/addTimetable?day=4&period=2">授業登録</a></td>
 				<!--金曜2限目-->
 				<td th:if="${class52 != null}">
-					<div th:href="@{/account/viewTimetable?lesoonId=={id}(id=${class52.id})}" th:text="${class52.name}">
-					</div>
+					<a class="tts" th:href="@{/account/viewTimetable?lesoonId=={id}(id=${class52.id})}"
+						th:text="${class52.name}">
+					</a>
 				</td>
 				<td th:if="${class52 == null}"><a href="/account/addTimetable?day=5&period=2">授業登録</a></td>
 				<!--土曜2限目-->
 				<td th:if="${class62 != null}">
-					<div th:href="@{/account/viewTimetable?lesoonId=={id}(id=${class62.id})}" th:text="${class62.name}">
-					</div>
+					<a class="tts" th:href="@{/account/viewTimetable?lesoonId=={id}(id=${class62.id})}"
+						th:text="${class62.name}">
+					</a>
 				</td>
 				<td th:if="${class62 == null}"><a href="/account/addTimetable?day=6&period=2">授業登録</a></td>
 			</tr>
 
 			<tr>
-				<th>3</th>
+				<th class="tabletitle">3</th>
 				<!--月曜3限目-->
 				<td th:if="${class13 != null}">
-					<div th:href="@{/account/viewTimetable?lessonId={id}(id=${class13.id})}" th:text="${class13.name}">
-					</div>
+					<a class="tts" th:href="@{/account/viewTimetable?lessonId={id}(id=${class13.id})}"
+						th:text="${class13.name}">
+					</a>
 				</td>
 				<td th:if="${class13 == null}"><a href="/account/addTimetable?day=1&period=3">授業登録</a></td>
 				<!--火曜3限目-->
 				<td th:if="${class23 != null}">
-					<div th:href="@{/account/viewTimetable?lessonId={id}(id=${class23.id})}" th:text="${class23.name}">
-					</div>
+					<a class="tts" th:href="@{/account/viewTimetable?lessonId={id}(id=${class23.id})}"
+						th:text="${class23.name}">
+					</a>
 				</td>
 				<td th:if="${class23 == null}"><a href="/account/addTimetable?day=2&period=3">授業登録</a></td>
 				<!--水曜3限目-->
 				<td th:if="${class33 != null}">
-					<div th:href="@{/account/viewTimetable?lesoonId=={id}(id=${class33.id})}" th:text="${class33.name}">
-					</div>
+					<a class="tts" th:href="@{/account/viewTimetable?lesoonId=={id}(id=${class33.id})}"
+						th:text="${class33.name}">
+					</a>
 				</td>
 				<td th:if="${class33 == null}"><a href="/account/addTimetable?day=3&period=3">授業登録</a></td>
 				<!--木曜3限目-->
 				<td th:if="${class43 != null}">
-					<div th:href="@{/account/viewTimetable?lesoonId=={id}(id=${class43.id})}" th:text="${class43.name}">
-					</div>
+					<a class="tts" th:href="@{/account/viewTimetable?lesoonId=={id}(id=${class43.id})}"
+						th:text="${class43.name}">
+					</a>
 				</td>
 				<td th:if="${class43 == null}"><a href="/account/addTimetable?day=4&period=3">授業登録</a></td>
 				<!--金曜3限目-->
 				<td th:if="${class53 != null}">
-					<div th:href="@{/account/viewTimetable?lesoonId=={id}(id=${class53.id})}" th:text="${class53.name}">
-					</div>
+					<a class="tts" th:href="@{/account/viewTimetable?lesoonId=={id}(id=${class53.id})}"
+						th:text="${class53.name}">
+					</a>
 				</td>
 				<td th:if="${class53 == null}"><a href="/account/addTimetable?day=5&period=3">授業登録</a></td>
 				<!--土曜3限目-->
 				<td th:if="${class63 != null}">
-					<div th:href="@{/account/viewTimetable?lesoonId=={id}(id=${class63.id})}" th:text="${class63.name}">
-					</div>
+					<a class="tts" th:href="@{/account/viewTimetable?lesoonId=={id}(id=${class63.id})}"
+						th:text="${class63.name}">
+					</a>
 				</td>
 				<td th:if="${class63 == null}"><a href="/account/addTimetable?day=6&period=3">授業登録</a></td>
 			</tr>
 
 			<tr>
-				<th>4</th>
+				<th class="tabletitle">4</th>
 				<!--月曜4限目-->
 				<td th:if="${class14 != null}">
-					<div th:href="@{/account/viewTimetable?lessonId={id}(id=${class14.id})}" th:text="${class14.name}">
-					</div>
+					<a class="tts" th:href="@{/account/viewTimetable?lessonId={id}(id=${class14.id})}"
+						th:text="${class14.name}">
+					</a>
 				</td>
 				<td th:if="${class14 == null}"><a href="/account/addTimetable?day=1&period=4">授業登録</a></td>
 				<!--火曜4限目-->
 				<td th:if="${class24 != null}">
-					<div th:href="@{/account/viewTimetable?lessonId={id}(id=${class24.id})}" th:text="${class24.name}">
-					</div>
+					<a class="tts" th:href="@{/account/viewTimetable?lessonId={id}(id=${class24.id})}"
+						th:text="${class24.name}">
+					</a>
 				</td>
 				<td th:if="${class24 == null}"><a href="/account/addTimetable?day=2&period=4">授業登録</a></td>
 				<!--水曜4限目-->
 				<td th:if="${class34 != null}">
-					<div th:href="@{/account/viewTimetable?lesoonId=={id}(id=${class34.id})}" th:text="${class34.name}">
-					</div>
+					<a class="tts" th:href="@{/account/viewTimetable?lesoonId=={id}(id=${class34.id})}"
+						th:text="${class34.name}">
+					</a>
 				</td>
 				<td th:if="${class34 == null}"><a href="/account/addTimetable?day=3&period=4">授業登録</a></td>
 				<!--木曜4限目-->
 				<td th:if="${class44 != null}">
-					<div th:href="@{/account/viewTimetable?lesoonId=={id}(id=${class44.id})}" th:text="${class44.name}">
-					</div>
+					<a class="tts" th:href="@{/account/viewTimetable?lesoonId=={id}(id=${class44.id})}"
+						th:text="${class44.name}">
+					</a>
 				</td>
 				<td th:if="${class44 == null}"><a href="/account/addTimetable?day=4&period=4">授業登録</a></td>
 				<!--金曜4限目-->
 				<td th:if="${class54 != null}">
-					<div th:href="@{/account/viewTimetable?lesoonId=={id}(id=${class54.id})}" th:text="${class54.name}">
-					</div>
+					<a class="tts" th:href="@{/account/viewTimetable?lesoonId=={id}(id=${class54.id})}"
+						th:text="${class54.name}">
+					</a>
 				</td>
 				<td th:if="${class54 == null}"><a href="/account/addTimetable?day=5&period=4">授業登録</a></td>
 				<!--土曜4限目-->
 				<td th:if="${class64 != null}">
-					<div th:href="@{/account/viewTimetable?lesoonId=={id}(id=${class64.id})}" th:text="${class64.name}">
-					</div>
+					<a class="tts" th:href="@{/account/viewTimetable?lesoonId=={id}(id=${class64.id})}"
+						th:text="${class64.name}">
+					</a>
 				</td>
 				<td th:if="${class64 == null}"><a href="/account/addTimetable?day=6&period=4">授業登録</a></td>
 			</tr>
 
 			<tr>
-				<th>5</th>
+				<th class="tabletitle">5</th>
 				<!--月曜5限目-->
 				<td th:if="${class15 != null}">
-					<div th:href="@{/account/viewTimetable?lessonId={id}(id=${class15.id})}" th:text="${class15.name}">
-					</div>
+					<a class="tts" th:href="@{/account/viewTimetable?lessonId={id}(id=${class15.id})}"
+						th:text="${class15.name}">
+					</a>
 				</td>
 				<td th:if="${class15 == null}"><a href="/account/addTimetable?day=1&period=5">授業登録</a></td>
 				<!--火曜5限目-->
 				<td th:if="${class25 != null}">
-					<div th:href="@{/account/viewTimetable?lessonId={id}(id=${class25.id})}" th:text="${class25.name}">
-					</div>
+					<a class="tts" th:href="@{/account/viewTimetable?lessonId={id}(id=${class25.id})}"
+						th:text="${class25.name}">
+					</a>
 				</td>
 				<td th:if="${class25 == null}"><a href="/account/addTimetable?day=2&period=5">授業登録</a></td>
 				<!--水曜5限目-->
 				<td th:if="${class35 != null}">
-					<div th:href="@{/account/viewTimetable?lesoonId=={id}(id=${class35.id})}" th:text="${class35.name}">
-					</div>
+					<a class="tts" th:href="@{/account/viewTimetable?lesoonId=={id}(id=${class35.id})}"
+						th:text="${class35.name}">
+					</a>
 				</td>
 				<td th:if="${class35 == null}"><a href="/account/addTimetable?day=3&period=5">授業登録</a></td>
 				<!--木曜5限目-->
 				<td th:if="${class45 != null}">
-					<div th:href="@{/account/viewTimetable?lesoonId=={id}(id=${class45.id})}" th:text="${class45.name}">
-					</div>
+					<a class="tts" th:href="@{/account/viewTimetable?lesoonId=={id}(id=${class45.id})}"
+						th:text="${class45.name}">
+					</a>
 				</td>
 				<td th:if="${class45 == null}"><a href="/account/addTimetable?day=4&period=5">授業登録</a></td>
 				<!--金曜5限目-->
 				<td th:if="${class55 != null}">
-					<div th:href="@{/account/viewTimetable?lesoonId=={id}(id=${class55.id})}" th:text="${class55.name}">
-					</div>
+					<a class="tts" th:href="@{/account/viewTimetable?lesoonId=={id}(id=${class55.id})}"
+						th:text="${class55.name}">
+					</a>
 				</td>
 				<td th:if="${class55 == null}"><a href="/account/addTimetable?day=5&period=5">授業登録</a></td>
 				<!--土曜5限目-->
 				<td th:if="${class65 != null}">
-					<div th:href="@{/account/viewTimetable?lesoonId=={id}(id=${class65.id})}" th:text="${class65.name}">
-					</div>
+					<a class="tts" th:href="@{/account/viewTimetable?lesoonId=={id}(id=${class65.id})}"
+						th:text="${class65.name}">
+					</a>
 				</td>
 				<td th:if="${class65 == null}"><a href="/account/addTimetable?day=6&period=5">授業登録</a></td>
 			</tr>
 
 			<tr>
-				<th>6</th>
+				<th class="tabletitle">6</th>
 				<!--月曜6限目-->
 				<td th:if="${class16 != null}">
-					<div th:href="@{/account/viewTimetable?lessonId={id}(id=${class16.id})}" th:text="${class16.name}">
-					</div>
+					<a class="tts" th:href="@{/account/viewTimetable?lessonId={id}(id=${class16.id})}"
+						th:text="${class16.name}">
+					</a>
 				</td>
 				<td th:if="${class16 == null}"><a href="/account/addTimetable?day=1&period=6">授業登録</a></td>
 				<!--火曜6限目-->
 				<td th:if="${class26 != null}">
-					<div th:href="@{/account/viewTimetable?lessonId={id}(id=${class26.id})}" th:text="${class26.name}">
-					</div>
+					<a class="tts" th:href="@{/account/viewTimetable?lessonId={id}(id=${class26.id})}"
+						th:text="${class26.name}">
+					</a>
 				</td>
 				<td th:if="${class26 == null}"><a href="/account/addTimetable?day=2&period=6">授業登録</a></td>
 				<!--水曜6限目-->
 				<td th:if="${class36 != null}">
-					<div th:href="@{/account/viewTimetable?lesoonId=={id}(id=${class36.id})}" th:text="${class36.name}">
-					</div>
+					<a class="tts" th:href="@{/account/viewTimetable?lesoonId=={id}(id=${class36.id})}"
+						th:text="${class36.name}">
+					</a>
 				</td>
 				<td th:if="${class36 == null}"><a href="/account/addTimetable?day=3&period=6">授業登録</a></td>
 				<!--木曜6限目-->
 				<td th:if="${class46 != null}">
-					<div th:href="@{/account/viewTimetable?lesoonId=={id}(id=${class46.id})}" th:text="${class46.name}">
-					</div>
+					<a class="tts" th:href="@{/account/viewTimetable?lesoonId=={id}(id=${class46.id})}"
+						th:text="${class46.name}">
+					</a>
 				</td>
 				<td th:if="${class46 == null}"><a href="/account/addTimetable?day=4&period=6">授業登録</a></td>
 				<!--金曜6限目-->
 				<td th:if="${class56 != null}">
-					<div th:href="@{/account/viewTimetable?lesoonId=={id}(id=${class56.id})}" th:text="${class56.name}">
-					</div>
+					<a class="tts" th:href="@{/account/viewTimetable?lesoonId=={id}(id=${class56.id})}"
+						th:text="${class56.name}">
+					</a>
 				</td>
 				<td th:if="${class56 == null}"><a href="/account/addTimetable?day=5&period=6">授業登録</a></td>
 				<!--土曜6限目-->
 				<td th:if="${class66 != null}">
-					<div th:href="@{/account/viewTimetable?lesoonId=={id}(id=${class66.id})}" th:text="${class66.name}">
-					</div>
+					<a class="tts" th:href="@{/account/viewTimetable?lesoonId=={id}(id=${class66.id})}"
+						th:text="${class66.name}">
+					</a>
 				</td>
 				<td th:if="${class66 == null}"><a href="/account/addTimetable?day=6&period=6">授業登録</a></td>
 			</tr>
