--- a/src/main/resources/static/css/user.css
+++ b/src/main/resources/static/css/user.css
@@ -30,8 +30,14 @@ main{
 	padding-bottom: 80px;
 	box-sizing: border-box;
 }
-img{
+.img{
 	 object-fit: cover;
   height: 200px;
   width: 155px;
+}
+.iteminfo{
+	color: darkblue;
+}
+.iteminfo:hover{
+	color: lightcoral;
 }
