--- a/src/main/resources/templates/setTimetable.html
+++ b/src/main/resources/templates/setTimetable.html
@@ -10,7 +10,7 @@
 	<header th:replace="header"></header>
 	<main>
 		<h1>時間割変更</h1>
-		<form action="/account/setTimetable" method="post">
+		<form action="?" method="?">
 			<input type="hidden" name="timetableId" th:value="${timetable.id}">
 			<table border="1">
 				<tr>
