学籍番号→個人番号

--- a/src/main/resources/templates/resetIntroduce.html
+++ b/src/main/resources/templates/resetIntroduce.html
@@ -14,7 +14,7 @@
 	<form action="/account/setIntroduce" method="post">
 	<table border="1" id="table">
 		<tr>
-			<th class="tabletitle">学籍番号</th>
+			<th class="tabletitle">個人番号</th>
 			<td th:text="${personalNumber}"></td>
 		</tr>
 		<tr>
