--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -16,7 +16,7 @@
 		<table id="table" border="1">
 			<!--		ユーザーの情報を書くテーブル-->
 			<tr>
-				<th class="tabletitle">個人番号</th>
+				<th class="tabletitle">学籍番号</th>
 				<td th:text="${user.personalNumber}" colspan="2"></td>
 			</tr>
 			<tr>
