--- a/src/main/resources/templates/deal.html
+++ b/src/main/resources/templates/deal.html
@@ -69,7 +69,7 @@
 		<br>
 		<p style="font-size: 24px; text-align: center;">購入者</p>
 		<p style="font-size: 24px; text-align: center;">[[${student.name}]]</p>
-		<p style="font-size: 24px; text-align: center;">個人番号</p>
+		<p style="font-size: 24px; text-align: center;">学籍番号</p>
 		<p style="font-size: 24px; text-align: center;">[[${student.personalNumber}]]</p>
 
 
