--- a/src/main/resources/static/css/mypage.css
+++ b/src/main/resources/static/css/mypage.css
@@ -95,6 +95,12 @@ textarea{
   height: 200px;
   width: 155px;
 }
+#table5{
+ width: 1000px;
+}
+#table5 button{
+	width: 100%;
+}
 #table5 th{
 	width: auto;;
 }
