--- a/src/main/resources/static/css/headerFooter.css
+++ b/src/main/resources/static/css/headerFooter.css
@@ -48,6 +48,7 @@ header {
   -webkit-text-stroke-color:white;
   display: inline-block;
   animation: hurueru 1s infinite;
+  
 }
 header h1 {
 	font-size: 40px;
@@ -71,6 +72,10 @@ header h1 {
 	font-weight:bold;
 	text-align: right;
 	margin: 0;
+	
+}
+#logout{
+	text-decoration: none;
 }
 #logout:hover{
 	text-decoration: none;
@@ -88,7 +93,6 @@ header h1 {
 	text-decoration: none;
 }
 .menu:hover{
-	text-decoration:underline;
 	color: lightcyan;
 }
 #bell:hover{
@@ -247,6 +251,9 @@ footer {
 	font-weight:bold;
 }
 
+.claimjump{
+	text-decoration: none;
+}
 .claimjump:hover{
 	color: lightcyan;
 }
