--- a/src/main/resources/templates/adminHeader.html
+++ b/src/main/resources/templates/adminHeader.html
@@ -13,9 +13,9 @@
 
 		<div id="header">
 			<a href="/home" class="menu">商品一覧</a><a href="/bbs" class="menu">掲示板</a><a href="/admin/claim" class="menu"
-				style="text-decoration:none;"><span style="text-decoration: underline;">問い合わせ確認</span><span
+				style="text-decoration:none;">問い合わせ確認<span
 					style="color: red;" class="alate" th:if="${@account.claimCount > 0}" th:text="${@account.requestCount}"></span></a><a href="/admin" class="menu"
-				style="text-decoration:none;"><span style="text-decoration: underline;">管理者画面</span><span
+				style="text-decoration:none;">管理者画面<span
 					style="color: red;" class="alate" th:if="${@account.requestCount >0}" th:text="${@account.requestCount}"></span></a>
 		</div>
 
