--- a/src/main/resources/static/css/headerFooter.css
+++ b/src/main/resources/static/css/headerFooter.css
@@ -48,7 +48,6 @@ header {
   -webkit-text-stroke-color:white;
   display: inline-block;
   animation: hurueru 1s infinite;
-  
 }
 header h1 {
 	font-size: 40px;
@@ -72,10 +71,6 @@ header h1 {
 	font-weight:bold;
 	text-align: right;
 	margin: 0;
-	
-}
-#logout{
-	text-decoration: none;
 }
 #logout:hover{
 	text-decoration: none;
@@ -93,6 +88,7 @@ header h1 {
 	text-decoration: none;
 }
 .menu:hover{
+	text-decoration:underline;
 	color: lightcyan;
 }
 #bell:hover{
@@ -251,9 +247,6 @@ footer {
 	font-weight:bold;
 }
 
-.claimjump{
-	text-decoration: none;
-}
 .claimjump:hover{
 	color: lightcyan;
 }
