--- a/src/main/resources/static/css/admin.css
+++ b/src/main/resources/static/css/admin.css
@@ -11,7 +11,7 @@ body {
 }
 
 input {
-	width: 80%;
+	width: 90%;
 	border: 1px solid #ccc;
 	border-radius: 4px;
 	font-size: 20px;
@@ -68,6 +68,7 @@ main button:hover {
 
 
 table {
+	background-color: white;
 	margin: auto;
 	white-space: pre-line;
 	font-size: 20px;
@@ -122,3 +123,11 @@ main{
 	padding-bottom: 80px;
 	box-sizing: border-box;
 }	
+
+select {
+	width: 90%;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	font-size: 15px;
+	margin: 2px;
+}
