--- a/src/main/resources/templates/setTimetable.html
+++ b/src/main/resources/templates/setTimetable.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>時間割変更</title>
+	<link rel="stylesheet" type="text/css" href="/css/setTimetable.css">
 </head>
 
 <body>
@@ -12,15 +13,15 @@
 		<h1>時間割変更</h1>
 		<form action="?" method="?">
 			<input type="hidden" name="timetableId" th:value="${timetable.id}">
-			<table border="1">
+			<table border="1" id="viewtimetable">
 				<tr>
-					<th>授業名</th>
-					<td><select name="lessonId">
+					<th class="tabletitle">授業名</th>
+					<td class="tabledata"><select name="lessonId" id="option">
 							<option th:each="lesson:${lessons}" th:value="${lesson.id}">[[${lesson.name}]]</option>
 						</select></td>
 				</tr>
 			</table>
-			<button type="submit" formmethod="post" formaction="/account/setTimetable">更新</button><button type="submit" formmethod="post" formaction="/account/deleteTimetable">削除</button>
+			<button type="submit" formmethod="post" formaction="/account/setTimetable" class="btn">更新</button><button type="submit" formmethod="post" formaction="/account/deleteTimetable" class="btn">削除</button>
 		</form>
 		<footer th:replace="footer"></footer>
 	</main>
