--- a/src/main/resources/templates/viewTimetable.html
+++ b/src/main/resources/templates/viewTimetable.html
@@ -11,19 +11,19 @@
 		<h1>授業詳細</h1>
 		<table border="1">
 			<tr>
-				<th>授業名</th>
+				<th class="tabletitle">授業名</th>
 				<td>[[${lesson.name}]]</td>
 			</tr>
 			<tr>
-				<th>教員名</th>
+				<th class="tabletitle">教員名</th>
 				<td>[[${teacher}]]</td>
 			</tr>
 			<tr th:if="${textbookCount > 0}">
-				<th th:rowspan="${textbookCount}">教科書</th>
-				<td><span th:utext="${textbook1.textbookUrl}"></span>　<span th:if="${history1.status == 1}">未購入</span><span th:if="${history1.status == 2}">購入済</span> <form th:action="'/account/setHistory/' + ${history1.id}" method="post" style="display: inline;"><input type="hidden" name="timetableId" th:value="${timetable.id}"><button>切替</button></form></td>
+				<th th:rowspan="${textbookCount}" class="tabletitle">教科書</th>
+				<td><span th:utext="${textbook1.textbookUrl}"></span>　<span th:if="${history1.status == 1}">未購入</span><span th:if="${history1.status == 2}">購入済</span> <form th:action="'/account/setHistory/' + ${history1.id}" method="post" style="display: inline;"><input type="hidden" name="timetableId" th:value="${timetable.id}"><button class="changebtn">切替</button></form></td>
 			</tr>
 			<tr th:if="${textbookCount > 1}" th:each="textbook:${textbooks}">
-				<td><span th:utext="${textbook.textbookUrl}"></span>　<th:block th:each="history:${histories}" th:if="${textbook.id == history.textbookId}"><span th:if="${history.status == 1}">未購入</span><span th:if="${history.status == 2}">購入済</span> <form th:action="'/account/setHistory/' + ${history.id}" method="post" style="display: inline;"><input type="hidden" name="timetableId" th:value="${timetable.id}"><button class="btn">切替</button></form></th:block></td>
+				<td><span th:utext="${textbook.textbookUrl}"></span>　<th:block th:each="history:${histories}" th:if="${textbook.id == history.textbookId}"><span th:if="${history.status == 1}">未購入</span><span th:if="${history.status == 2}">購入済</span> <form th:action="'/account/setHistory/' + ${history.id}" method="post" style="display: inline;"><input type="hidden" name="timetableId" th:value="${timetable.id}"><button class="changebtn">切替</button></form></th:block></td>
 			</tr>
 		</table>
 		<button onclick="location.href='/account'" class="btn">戻る</button>
