--- a/src/main/resources/static/css/viewTimetable.css
+++ b/src/main/resources/static/css/viewTimetable.css
@@ -18,14 +18,15 @@ main{
 	min-width: 200px;
 }
 .btn{
+	margin-top: 10px;
 	color:#003775;
-  font-size: 20px;
-  font-weight: bold;
-  background: #6C9BD2;
-  padding: 5px 30px;
-  border-radius: 6px;
-  transition: .3s;
-  cursor: pointer;
+	font-size: 20px;
+	font-weight: bold;
+	background: #6C9BD2;
+	padding: 5px 30px;
+	border-radius: 6px;
+	transition: .3s;
+	cursor: pointer;
 }
 .btn:hover{
 	background-color: #003775;
@@ -34,4 +35,19 @@ main{
 }
 table{
 	margin: 0 auto;
+}
+.changebtn{
+	color:#003775;
+	font-size: 15px;
+	font-weight: bold;
+	background: #6C9BD2;
+	padding: 5px 30px;
+	border-radius: 6px;
+	transition: .3s;
+	cursor: pointer;
+}
+.changebtn:hover{
+	background-color: #003775;
+	color: white;
+	cursor: pointer;
 }
